feat: Page guarantees states
